[package]
name = "bugcrowd-webhook-manager"
version = "1.2.0"
edition = "2021"
publish = false

[dependencies]
axum = "0.6.18"
dotenv = "0.15.0"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
slack-morphism = { version = "1.12", features = ["hyper", "axum"] }
url = "2.4.0"
